--- a/preamble.tex
+++ b/preamble.tex
@@ -97,6 +97,7 @@
 \newcommand{\iprod}[2]{\langle #1, #2 \rangle} %dot product
 \newcommand{\norm}[1]{ \| #1 \| } % norm
 \newcommand{\canvec}{\vv{e}}
+\newcommand{\defpt}{\vv{c}}
 %representation of rational numbers
 \newcommand{\tail}[1]{\left[ #1 \right]} 
 \newcommand{\lpr}[2]{ [ \hspace{.01in} #1 \, \% \, #2 \hspace{.01in} ]} %least positive residue
